leaderboard-section: font-sizes

--- a/src/core/SCSS/base/layout/leaderboard/l-leaderboard-section.scss
+++ b/src/core/SCSS/base/layout/leaderboard/l-leaderboard-section.scss
@@ -12,14 +12,15 @@
   font-weight: lighter;
   text-transform: uppercase;
   color: $cta-yellow;
-  margin-bottom: 16px;
+  margin-top: 35px;
 }
 
 .description {
   font-family: 'textFont', sans-serif;
   color: $background-sand;
   line-height: 1.5;
-  margin-bottom: 16px;
+  margin-bottom: 30px;
+  font-size: 1.5rem;
 }
 
 .tagtitles {
