Image folder done

--- a/src/core/SCSS/base/layout/page/p-stand-alone-page.scss
+++ b/src/core/SCSS/base/layout/page/p-stand-alone-page.scss
@@ -6,7 +6,7 @@
 }
 
 .backgroundimg {
-  background-image: url('/images/herostandalone.webp');
+  background-image: url('/images/stand-alone/herostandalone.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
