--- a/src/core/SCSS/base/layout/leaderboard/l-leaderboard-table.scss
+++ b/src/core/SCSS/base/layout/leaderboard/l-leaderboard-table.scss
@@ -1,5 +1,18 @@
 @import '../../vars.scss';
 
+.fade-in-up {
+  animation: fade-in-up 0.7s ease-out forwards;
+}
+
+@keyframes fade-in-up {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .headertable {
   color: $cta-yellow;
   font-family: 'titleFont', sans-serif;
