--- a/src/core/SCSS/base/layout/leaderboard/l-leaderboard-table.scss
+++ b/src/core/SCSS/base/layout/leaderboard/l-leaderboard-table.scss
@@ -55,5 +55,6 @@
 .cardtext {
   color: $background-sand;
   font-family: 'textFont', sans-serif;
-  font-size: 0.7rem;
+  font-size: 1.1rem;
+  padding-left: 1.7rem;
 }
