--- a/src/core/SCSS/base/sections/s-news-and-events-section.scss
+++ b/src/core/SCSS/base/sections/s-news-and-events-section.scss
@@ -33,3 +33,10 @@
   line-height: 1.5;
   margin-bottom: 16px;
 }
+
+.ReadMoreButton p {
+  padding-top: 0.5px;
+  font-size: 1.2rem;
+  text-align: center;
+  margin: 0;
+}
