--- a/src/core/SCSS/base/layout/page/p-stand-alone-page.scss
+++ b/src/core/SCSS/base/layout/page/p-stand-alone-page.scss
@@ -245,7 +245,6 @@
   flex-direction: column;
   position: relative;
   z-index: 20;
-  gap: 1rem;
 
   @media (min-width: 768px) {
     width: 50%;
@@ -272,7 +271,7 @@
   font-family: titleFont, sans-serif;
   color: $cta-yellow;
   font-size: 2.75rem;
-  padding: 2rem 3.25rem;
+  padding: 3.25rem 3.25rem 0.75rem 3.25rem;
   text-transform: uppercase;
 }
 
