fix: Major unit and descriptions

--- a/src/core/SCSS/base/layout/page/units-page/p-units-page-icons.scss
+++ b/src/core/SCSS/base/layout/page/units-page/p-units-page-icons.scss
@@ -34,6 +34,9 @@
   &.icon-marine {
     background-image: url('/images/icons/small-icons/marine-icon.webp');
   }
+  &.icon-major {
+    background-image: url('/images/icons/small-icons/major-icon.webp');
+  }
   &.icon-admiral {
     background-image: url('/images/icons/small-icons/admiral-icon.webp');
   }
