--- a/src/core/SCSS/base/layout/l-calendar.scss
+++ b/src/core/SCSS/base/layout/l-calendar.scss
@@ -116,7 +116,7 @@
 }
 
 .modal-container {
-  background-color: $background-blue;
+  background-color: $footer-background;
   border-radius: 0.5rem;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 1.5rem;
