--- a/src/core/SCSS/base/layout/page/units-page/p-units-page.scss
+++ b/src/core/SCSS/base/layout/page/units-page/p-units-page.scss
@@ -182,6 +182,10 @@
       width: 100%;
     }
 
+    &-description {
+      padding-bottom: 2rem;
+    }
+
     .units-page-panel-image-container {
       margin-top: 1rem;
       width: 250px;
