fix: Fixed coloring of sidebar and replaced our hero image on gameguide

--- a/src/core/SCSS/base/layout/l-burgermenu.scss
+++ b/src/core/SCSS/base/layout/l-burgermenu.scss
@@ -25,6 +25,14 @@
   color: $cta-yellow;
 }
 
+.backgroundburger span {
+  color: $background-sand;
+}
+
+.backgroundburger span:hover {
+  color: $cta-yellow;
+}
+
 .buttonbg {
   background-color: $background-blue;
   z-index: 100;
@@ -32,7 +40,7 @@
 
 .navIcons {
   margin-top: 23rem;
-
+  color: $background-sand;
   a.active-link {
     color: $cta-yellow;
     font-weight: 600;
