--- a/src/core/SCSS/base/layout/page/p-game-guide-page.scss
+++ b/src/core/SCSS/base/layout/page/p-game-guide-page.scss
@@ -7,7 +7,7 @@
 }
 
 .backgroundggimg {
-  background-image: url('/images/gameguide.jpg');
+  background-image: url('/images/gameguidehero.webp');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
