fix: updated units banner

--- a/src/core/SCSS/base/layout/page/units-page/p-units-page.scss
+++ b/src/core/SCSS/base/layout/page/units-page/p-units-page.scss
@@ -6,7 +6,7 @@
 }
 
 .units-page-hero {
-  background-image: url('/images/Units_hero_img.webp');
+  background-image: url('/images/game_guide_banner.webp');
   background-size: cover;
   height: 50vh;
   width: 100%;
