fix: fixed my links

--- a/src/core/SCSS/base/layout/l-burgermenu.scss
+++ b/src/core/SCSS/base/layout/l-burgermenu.scss
@@ -25,11 +25,7 @@
   color: $cta-yellow;
 }
 
-.backgroundburger span {
-  color: $background-sand;
-}
-
-.backgroundburger span:hover {
+.backgroundburger {
   color: $cta-yellow;
 }
 
