--- a/src/core/SCSS/base/layout/page/units-page/p-units-page.scss
+++ b/src/core/SCSS/base/layout/page/units-page/p-units-page.scss
@@ -128,7 +128,6 @@
   justify-content: space-evenly;
   padding: 5rem;
   margin: 0 auto;
-  border-bottom: 2px solid $background-sand;
 
   h1 {
     font-family: titleFont, sans-serif;
@@ -197,9 +196,8 @@
 .units-page-stats {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  gap: 2rem;
-  padding: 1rem;
+  gap: 10rem;
+  padding-left: 9rem;
 
   &-block,
   &-skills {
@@ -266,6 +264,15 @@
         background-color: transparent;
         border-radius: 6px;
       }
+    }
+  }
+
+  @media (min-width: 400px) and (max-width: 1234px) {
+    padding: 2rem;
+
+    &-block,
+    &-skills {
+      width: 100%;
     }
   }
 }
