--- a/src/core/SCSS/base/_mixins.scss
+++ b/src/core/SCSS/base/_mixins.scss
@@ -25,6 +25,16 @@
   text-align: center;
 }
 
+@mixin medium-left-title {
+  font-family: titleFont, sans-serif;
+  font-size: 3.1rem;
+  text-transform: uppercase;
+  color: $cta-yellow;
+  margin: 0 auto;
+  padding: 2rem 0;
+  text-shadow: 3px 3px 4px $background-blue;
+}
+
 @mixin small-title {
   font-family: titleFont, sans-serif;
   font-size: 5.25rem;
