chore: fixed padding on phone

--- a/src/core/SCSS/base/layout/page/units-page/p-units-page.scss
+++ b/src/core/SCSS/base/layout/page/units-page/p-units-page.scss
@@ -268,7 +268,7 @@
   }
 
   @media (min-width: 400px) and (max-width: 1234px) {
-    padding: 2rem;
+    padding: 0;
 
     &-block,
     &-skills {
