--- a/src/core/SCSS/base/layout/l-burgermenu.scss
+++ b/src/core/SCSS/base/layout/l-burgermenu.scss
@@ -38,6 +38,10 @@
 .buttonbg {
   background-color: $background-blue;
   z-index: 100;
+
+  line {
+    color: $background-sand;
+  }
 }
 
 .navIcons {
