--- a/src/core/SCSS/base/_mixins.scss
+++ b/src/core/SCSS/base/_mixins.scss
@@ -56,11 +56,10 @@
   text-shadow: 3px 3px 4px $background-blue;
   text-align: center;
 
-  @media (max-width: 768px) {
+  @media (max-width: 1234px) {
     font-size: 2.5rem;
-    padding: 1rem 0;
-    text-shadow: none;
-    width: 100%;
+    padding: 2rem;
+    text-align: left;
   }
 }
 
