--- a/src/core/SCSS/base/layout/page/p-stand-alone-page.scss
+++ b/src/core/SCSS/base/layout/page/p-stand-alone-page.scss
@@ -128,7 +128,7 @@
     font-family: textFont, sans-serif;
     font-size: 1.3rem;
     color: $background-sand;
-    text-wrap: pretty;
+    text-wrap: balance;
 
     &::before {
       content: '•';
@@ -152,6 +152,7 @@
 
     &-text {
       font-size: 1.25rem;
+      padding-right: 1rem;
     }
 
     &-item {
@@ -291,11 +292,10 @@
 }
 
 .segment-title {
-  font-family: titleFont, sans-serif;
-  color: $cta-yellow;
-  font-size: 2.75rem;
-  padding: 3.25rem 3.25rem 0.75rem 3.25rem;
-  text-transform: uppercase;
+  @include smaller-title;
+  @media screen and (max-width: 768px) {
+    font-size: 2rem;
+  }
 }
 
 .segment-description {
@@ -306,6 +306,11 @@
   padding: 0 3.5rem 5rem 3.5rem;
   width: 100%;
   text-wrap: pretty;
+  @media screen and (max-width: 768px) {
+    text-align: left;
+    font-size: 1rem;
+    padding-left: 2rem;
+  }
 }
 
 .segment-note {
