--- a/src/core/SCSS/base/layout/l-burgermenu.scss
+++ b/src/core/SCSS/base/layout/l-burgermenu.scss
@@ -9,14 +9,38 @@
   z-index: 100;
   top: 0;
   left: 0;
+  width: 16rem;
   background-color: $background-blue;
   touch-action: none;
 
   @media screen and (max-width: 1024px) {
     background-color: transparent;
     background-position: center;
+  }
+
+  @media screen and (max-width: 1025px) {
+    background-color: transparent;
+    background-position: center;
+    position: fixed;
+    width: 30%;
+  }
+  @media screen and (max-width: 768px) {
+    background-color: transparent;
+    background-position: center;
     position: fixed;
     width: 40%;
+  }
+  @media screen and (max-width: 600px) {
+    background-color: transparent;
+    background-position: center;
+    position: fixed;
+    width: 50%;
+  }
+  @media screen and (max-width: 400px) {
+    background-color: transparent;
+    background-position: center;
+    position: fixed;
+    width: 70%;
   }
 }
 .blurbackground {
@@ -57,18 +81,18 @@
     }
   }
 
-  @media screen and (max-width: 1024px) {
-    margin-top: 33rem;
+  @media screen and (max-width: 1025px) {
+    margin-top: 20rem;
     font-size: 1rem;
   }
 
   @media screen and (max-width: 768px) {
-    margin-top: 20rem;
+    margin-top: 15rem;
     font-size: 0.8rem;
   }
 
   @media screen and (max-width: 400px) {
-    margin-top: 12rem;
-    font-size: 0.6rem;
+    margin-top: 10.5rem;
+    font-size: 0.9rem;
   }
 }
