--- a/src/core/SCSS/base/_mixins.scss
+++ b/src/core/SCSS/base/_mixins.scss
@@ -27,7 +27,7 @@
 
 @mixin medium-left-title {
   font-family: titleFont, sans-serif;
-  font-size: 3.1rem;
+  font-size: 3rem;
   text-transform: uppercase;
   color: $cta-yellow;
   margin: 0 auto;
@@ -58,7 +58,7 @@
 
   @media (max-width: 1234px) {
     font-size: 2.5rem;
-    padding: 2rem;
+    // padding: 2rem;
     text-align: left;
   }
 }
@@ -76,4 +76,9 @@
   color: $background-sand;
   margin: 0 auto;
   padding-bottom: 1rem;
+  text-wrap: pretty;
+
+  @media (max-width: 768px) {
+    font-size: 1.4rem;
+  }
 }
