--- a/src/core/SCSS/base/sections/s-newsandevents.scss
+++ b/src/core/SCSS/base/sections/s-newsandevents.scss
@@ -11,7 +11,6 @@
 
 .titletext {
   @include smaller-title;
-  padding-top: 100px;
 }
 
 .watch-us-title {
@@ -43,6 +42,10 @@
   font-size: 2rem;
   line-height: 1.5;
   margin-bottom: 16px;
+
+  @media (max-width: 1234px) {
+    text-align: left;
+  }
 }
 
 .WatchUs_Block {
