--- a/src/core/SCSS/base/layout/l-burgermenu.scss
+++ b/src/core/SCSS/base/layout/l-burgermenu.scss
@@ -13,17 +13,16 @@
   background-color: $background-blue;
   touch-action: none;
 
+  @media screen and (max-width: 1025px) {
+    background-color: $background-blue;
+    background-position: center;
+    position: fixed;
+  }
   @media screen and (max-width: 1024px) {
     background-color: transparent;
     background-position: center;
   }
 
-  @media screen and (max-width: 1025px) {
-    background-color: transparent;
-    background-position: center;
-    position: fixed;
-    width: 30%;
-  }
   @media screen and (max-width: 768px) {
     background-color: transparent;
     background-position: center;
@@ -44,7 +43,7 @@
   }
 }
 .blurbackground {
-  z-index: 60;
+  z-index: 999999;
 }
 
 .backgroundburger a {
