chore: can't remember anymore

--- a/src/core/SCSS/base/sections/s-newsandevents.scss
+++ b/src/core/SCSS/base/sections/s-newsandevents.scss
@@ -9,9 +9,9 @@
   background-repeat: no-repeat;
 }
 
-.titletext {
-  @include smaller-title;
-}
+// .titletext {
+//   @include smaller-title;
+// }
 
 .watch-us-title {
   font-family: 'titleFont', sans-serif;
