--- a/src/core/SCSS/base/_mixins.scss
+++ b/src/core/SCSS/base/_mixins.scss
@@ -52,7 +52,7 @@
   text-transform: uppercase;
   color: $cta-yellow;
   margin: 0 auto;
-  padding: 2rem 0;
+  padding: 2rem;
   text-shadow: 3px 3px 4px $background-blue;
   text-align: center;
 
