--- a/src/core/SCSS/base/sections/s-newsandevents.scss
+++ b/src/core/SCSS/base/sections/s-newsandevents.scss
@@ -9,9 +9,9 @@
   background-repeat: no-repeat;
 }
 
-// .titletext {
-//   @include smaller-title;
-// }
+.titletext {
+  @include smaller-title;
+}
 
 .watch-us-title {
   font-family: 'titleFont', sans-serif;
@@ -44,6 +44,7 @@
   margin-bottom: 16px;
 
   @media (max-width: 1234px) {
+    padding-left: 2rem;
     text-align: left;
   }
 }
