--- a/src/core/SCSS/base/layout/page/p-stand-alone-page.scss
+++ b/src/core/SCSS/base/layout/page/p-stand-alone-page.scss
@@ -295,6 +295,8 @@
   @include smaller-title;
   @media screen and (max-width: 768px) {
     font-size: 2rem;
+    text-align: center;
+    padding: 2rem 2rem 0 2rem;
   }
 }
 
@@ -303,7 +305,7 @@
   color: $background-sand;
   font-size: 1.15rem;
   line-height: 1.75;
-  padding: 0 3.5rem 2rem 3.5rem;
+  padding: 2rem;
   width: 100%;
   text-wrap: pretty;
   @media screen and (max-width: 768px) {
