fix: added font-family

--- a/src/core/SCSS/base/components/_buttons.scss
+++ b/src/core/SCSS/base/components/_buttons.scss
@@ -21,6 +21,7 @@
 
 .PlayNowButton {
   @extend %BaseCTAButton;
+  font-family: titleFont, sans-serif;
   background-color: $cta-blue;
   color: $background-sand;
 
