fix: used important to override some style

--- a/src/core/SCSS/base/components/_buttons.scss
+++ b/src/core/SCSS/base/components/_buttons.scss
@@ -37,7 +37,7 @@
   background-color: $cta-yellow;
   p {
     color: $background-blue !important;
-    font-family: titleFont, sans-serif;
+    font-family: titleFont, sans-serif !important;
     margin-bottom: 0 !important;
   }
 
