--- a/src/core/SCSS/base/_mixins.scss
+++ b/src/core/SCSS/base/_mixins.scss
@@ -12,6 +12,9 @@
   @media (max-width: 768px) {
     font-size: 2.87rem;
   }
+  @media (max-width: 400px) {
+    font-size: 2.6rem;
+  }
 }
 
 @mixin medium-title {
