--- a/src/core/SCSS/base/layout/page/aboutus-page/p-about-us-page.scss
+++ b/src/core/SCSS/base/layout/page/aboutus-page/p-about-us-page.scss
@@ -8,7 +8,9 @@
 }
 
 .about-us-title {
-  @include section-left-title;
+  @include large-title;
+  text-align: left;
+  margin: 0;
 }
 
 .about-text {
@@ -21,6 +23,10 @@
   @media (min-width: 400px) and (max-width: 1234px) {
     padding-left: 1rem;
     font-size: 2.5rem;
+  }
+  @media (max-width: 400px) {
+    padding-left: 1rem;
+    font-size: 1.5rem;
   }
 
   h2 {
@@ -104,7 +110,10 @@
     margin: 0;
     display: grid;
     gap: 2rem;
-    grid-template-columns: repeat(auto-fit, minmax(360px, 2fr));
+    grid-template-columns: repeat(auto-fit, minmax(350px, 2fr));
+    @media (max-width: 768px) {
+      grid-template-columns: 1fr;
+    }
   }
 
   .what-we-do-item {
